--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,5 @@ types-urllib3 == 1.26.14
 types-waitress == 2.1.4.3
 urllib3 == 1.26.15
 waitress == 2.1.1
+Werkzeug == 2.0.3
 youtube-dl == 2021.12.17
