--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,40 @@ env:
   CONTAINER_NAME: goal-bot
 
 jobs:
+    test:
+      runs-on: ubuntu-latest
+
+      steps:
+        - uses: actions/checkout@v3
+
+        - name: Create env file
+          run: |
+            mkdir config
+            touch config/.env
+            echo BEARER_TOKEN=${{ secrets.BEARER_TOKEN }} >> config/.env
+            echo CONSUMER_KEY=${{ secrets.CONSUMER_KEY }} >> config/.env
+            echo CONSUMER_SECRET=${{ secrets.CONSUMER_SECRET }} >> config/.env
+            echo ACCESS_TOKEN=${{ secrets.ACCESS_TOKEN }} >> config/.env
+            echo ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET }} >> config/.env
+
+        - name: Install Python 3
+          uses: actions/setup-python@v1
+          with:
+            python-version: 3.9
+
+        - name: Install dependencies
+          run: |
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+
+        - name: Run unit tests
+          run: make test
+
+        - name: Publish Unit Test Results
+          uses: EnricoMi/publish-unit-test-result-action@v1.36
+          with:
+            files: ./results.xml
+
     lint:
       runs-on: ubuntu-latest
 
@@ -44,7 +78,7 @@ jobs:
             run: make analyze
 
     build:
-        needs: [lint, analyze]
+        needs: [test, lint, analyze]
         runs-on: ubuntu-latest
         steps:
 
