Upgrade Python version

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-Flask == 2.0.3
-loguru == 0.6.0
-mypy == 0.950
-mypy-extensions == 0.4.3
-python-dateutil == 2.8.2
-python-dotenv == 0.19.2
+Flask == 3.0.3
+loguru == 0.7.2
+mypy == 1.11.2
+mypy-extensions == 1.0.0
+python-dateutil == 2.9.0.post0
+python-dotenv == 1.0.1
 pause == 0.3
-pyclean == 2.7.0
-pylint == 2.13.5
-pytest == 7.1.1
-pytz == 2022.1
-requests == 2.27.1
-tweepy == 4.6.0
-types-python-dateutil == 2.8.15
-types-pytz == 2021.3.8
-types-requests == 2.27.25
-types-urllib3 == 1.26.14
-types-waitress == 2.1.4.3
-urllib3 == 1.26.15
-waitress == 2.1.1
-Werkzeug == 2.0.3
+pyclean == 3.0.0
+pylint == 3.3.1
+pytest == 8.3.3
+pytz == 2024.2
+requests == 2.32.3
+tweepy == 4.14.0
+types-python-dateutil == 2.9.0.20241003
+types-pytz == 2024.2.0.20241003
+types-requests == 2.32.0.20240914
+types-urllib3 == 1.26.25.14
+types-waitress == 3.0.0.20241001
+urllib3 == 2.2.3
+waitress == 3.0.0
+Werkzeug == 3.0.4
 youtube-dl == 2021.12.17
