--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+atproto == 0.0.57
 coverage == 7.6.4
 Flask == 3.0.3
+imageio-ffmpeg == 0.6.0
 loguru == 0.7.2
+moviepy == 2.1.2
 mypy == 1.11.2
 mypy-extensions == 1.0.0
 python-dateutil == 2.9.0.post0
@@ -8,6 +11,7 @@ python-dotenv == 1.0.1
 pause == 0.3
 pyclean == 3.0.0
 pylint == 3.3.1
+pymediainfo == 6.1.0
 pytest == 8.3.3
 pytz == 2024.2
 requests == 2.32.3
